--- a/GranTurismo/sezona2025_test.html
+++ b/GranTurismo/sezona2025_test.html
@@ -55,21 +55,6 @@
   #nextRaceInfo .countdown{display:inline-block;font-weight:800;color:var(--accent2);font-size:18px;margin-top:4px}
 
   @media(max-width:800px){ .row{flex-direction:column} .youtube-thumb{width:80px} th,td{font-size:13px} header h1{font-size:18px} }
-
-/* --- Planned table compact mode (non-breaking) --- */
-#plannedTable { table-layout: fixed; }
-#plannedTable th, #plannedTable td { font-size: 12px; line-height: 1.2; word-break: break-word; }
-@media (max-width: 1100px){
-  #plannedTable th, #plannedTable td { font-size: 11px; }
-}
-/* multi-line clamp helpers */
-#plannedTable .clamp-2 { display: -webkit-box; -webkit-line-clamp: 2; -webkit-box-orient: vertical; overflow: hidden; }
-#plannedTable .clamp-3 { display: -webkit-box; -webkit-line-clamp: 3; -webkit-box-orient: vertical; overflow: hidden; }
-/* set reasonable widths for the long columns */
-#plannedTable th:nth-child(1), #plannedTable td:nth-child(1){ width: 160px; }
-#plannedTable th:nth-child(2), #plannedTable td:nth-child(2){ width: 200px; }
-#plannedTable th:nth-child(4), #plannedTable td:nth-child(4){ width: 230px; }
-#plannedTable th:nth-child(14), #plannedTable td:nth-child(14){ width: 260px; }
 </style>
 
 <!-- Firebase compat -->
@@ -180,6 +165,31 @@ tbody tr:hover{ background: rgba(255,255,255,0.04); }
 
 /* Container spacing under hero */
 .container{ margin-top: 14px; }
+
+  /* Planned: compact table */
+#plannedTable{
+  font-size:13px;
+  line-height:1.25;
+  table-layout:fixed;
+}
+#plannedTable th, #plannedTable td{
+  padding:6px 8px;
+}
+#plannedTable td:nth-child(2){ min-width:180px; }  /* Závod */
+#plannedTable td:nth-child(4){ min-width:220px; }  /* Vozidla */
+#plannedTable td:last-child{ min-width:220px; }    /* Info */
+#plannedTable td{
+  word-break:break-word;
+  hyphens:auto;
+}
+
+/* vlastní scroll pro kartu s plánovanými závody */
+.card:has(#plannedTable){
+  max-height:70vh;
+  overflow:auto;
+}
+
+  
 </style>
 </head>
 <body>
@@ -294,6 +304,26 @@ tbody tr:hover{ background: rgba(255,255,255,0.04); }
       </div>
     </div>
 
+<div class="card" id="titleMathCard">
+  <strong>Titulová matematika (předpověď)</strong>
+  <div id="titleMathMeta" class="small" style="margin-top:6px"></div>
+  <table id="titleMathTable" style="margin-top:8px">
+    <thead>
+      <tr>
+        <th>Jezdec</th>
+        <th>Body</th>
+        <th>Max dosažitelné</th>
+        <th>Na titul?</th>
+        <th>Na pódium?</th>
+        <th>Chybí na 1.</th>
+        <th>Chybí na 3.</th>
+      </tr>
+    </thead>
+    <tbody></tbody>
+  </table>
+</div>
+
+    
     <div class="card" id="carStatsCard">
       <strong>Auta & značky</strong>
       <div class="row" style="margin-top:10px">
@@ -677,6 +707,7 @@ function renderAll(){
   renderCarStats();
   renderAdvancedStats();
   renderProfileInit();
+  renderTitleMath(); // ⟵ DOPLNĚNO
 }
 
 /* === Nejbližší závod + připomínka === */
@@ -869,7 +900,6 @@ function renderResultsTable(){
 
 /* === Planned (everything not completed) === */
 function renderPlannedTable(){
-
   const tbody=$('#plannedTable tbody'); tbody.innerHTML='';
   const planned = racesCache.filter(r=>!isCompletedRace(r))
     .sort((a,b)=> new Date(a.datum||a.date||0) - new Date(b.datum||b.date||0));
@@ -889,15 +919,9 @@ function renderPlannedTable(){
     const pit = escapeHtml(r.pitstop||'');
     const laps = escapeHtml(r.pocet_kol||r.laps||'');
     const info = escapeHtml(r.info||'');
-    const raceHTML = `<span class="clamp-2" title="${title} / ${track}">${title} / ${track}</span>`;
-    const vehHTML = `<span class="clamp-3" title="${veh}">${veh}</span>`;
-    const infoHTML = `<span class="clamp-3" title="${info}">${info}</span>`;
     const tr=document.createElement('tr');
-    tr.innerHTML = `<td>${dateStr}</td><td>${raceHTML}</td><td>${cat}</td><td>${vehHTML}</td><td>${tuning}</td><td>${bop}</td><td>${tyres}</td><td>${comp}</td><td>${wear}</td><td>${fuel}</td><td>${refuel}</td><td>${pit}</td><td>${laps}</td><td>${infoHTML}</td>`;
-    tbody.appendChild(tr);
-  });
-
-}</td><td>${title} / ${track}</td><td>${cat}</td><td>${veh}</td><td>${tuning}</td><td>${bop}</td>
+    tr.innerHTML = `
+      <td>${dateStr}</td><td>${title} / ${track}</td><td>${cat}</td><td>${veh}</td><td>${tuning}</td><td>${bop}</td>
       <td>${tyres}</td><td>${comp}</td><td>${wear}</td><td>${fuel}</td><td>${refuel}</td><td>${pit}</td><td>${laps}</td><td>${info}</td>`;
     tbody.appendChild(tr);
   });
@@ -1866,6 +1890,95 @@ function renderAdvancedStats(){
   });
 }
 
+// === Titulová matematika (what-if) ===
+function renderTitleMath(){
+  const tbody = document.querySelector('#titleMathTable tbody');
+  const meta = document.querySelector('#titleMathMeta');
+  if(!tbody || !meta) return;
+
+  // 1) Dokončené závody = jen ty, které projdou isCompletedRace
+  const completed = (racesCache||[]).filter(isCompletedRace);
+
+  // body teď
+  const pointsNow = {};
+  drivers.forEach(d=>pointsNow[d]=0);
+
+  completed.forEach(r=>{
+    const penal = Array.isArray(r.penalties)? r.penalties : [];
+    const arr = applyPenalties(getResultsArray(r), penal);
+    for(let i=0;i<5;i++){
+      const name = arr[i];
+      if(!name || name==='DNS' || name==='—') continue;
+      const d = normName(name);
+      if(pointsNow[d]==null) pointsNow[d]=0;
+      pointsNow[d] += (pointsMap[i]||0);
+    }
+  });
+
+  // 2) Zbývající závody = vše, co NENÍ completed
+  const remaining = (racesCache||[]).filter(r=>!isCompletedRace(r)).length;
+  const maxPerRace = pointsMap[0] || 10;
+
+  // 3) Max dosažitelné
+  const maxPossible = {};
+  drivers.forEach(d=>{
+    maxPossible[d] = (pointsNow[d]||0) + remaining*maxPerRace;
+  });
+
+  // 4) Současné pořadí
+  const sortedNow = [...drivers].sort((a,b)=>(pointsNow[b]||0)-(pointsNow[a]||0));
+  const leader = sortedNow[0] || null;
+  const third  = sortedNow[2] || null;
+  const leaderPts = leader ? (pointsNow[leader]||0) : 0;
+  const thirdPts  = third  ? (pointsNow[third]||0)  : 0;
+
+  // 5) Prahy pro "je ve hře" – podle max dosažitelných bodů všech
+  const maxPossibleSorted = [...drivers].map(d=>maxPossible[d]).sort((a,b)=>b-a);
+  const thresholdTitle  = maxPossibleSorted[0] || 0; // top max
+  const thresholdPodium = maxPossibleSorted[2] || 0; // 3. max
+
+  // 6) Magic number pro lídra
+  const second = sortedNow[1] || null;
+  const secondPts = second ? (pointsNow[second]||0) : 0;
+  const needGapToClinich = Math.max(0, (remaining*maxPerRace) - (leaderPts - secondPts) + 1);
+  const clinchTxt = remaining===0
+    ? 'Sezóna je uzavřená.'
+    : (needGapToClinich===0
+        ? `Lídr (${leader||'—'}) už má jistotu titulu.`
+        : `Lídr (${leader||'—'}) potřebuje navýšit náskok o ${needGapToClinich} bodů, aby měl jistotu titulu.`);
+
+  meta.innerHTML = `Zbývá závodů: <strong>${remaining}</strong> • Max bodů / závod: <strong>${maxPerRace}</strong><br>${clinchTxt}`;
+
+  // 7) Render tabulky
+  tbody.innerHTML = '';
+  const rows = [...drivers].map(d=>{
+    const now = pointsNow[d]||0;
+    const maxD = maxPossible[d]||0;
+    const inTitle  = maxD >= thresholdTitle  ? 'ANO' : 'NE';
+    const inPodium = maxD >= thresholdPodium ? 'ANO' : 'NE';
+    const miss1 = Math.max(0, leaderPts - now);
+    const miss3 = Math.max(0, thirdPts  - now);
+    return {d, now, maxD, inTitle, inPodium, miss1, miss3};
+  });
+
+  rows.sort((a,b)=> (b.now - a.now) || (b.maxD - a.maxD));
+
+  rows.forEach(row=>{
+    const tr=document.createElement('tr');
+    tr.innerHTML = `
+      <td>${escapeHtml(row.d)}</td>
+      <td>${row.now}</td>
+      <td>${row.maxD}</td>
+      <td style="color:${row.inTitle==='ANO' ? '#4caf50' : '#ccc'}">${row.inTitle}</td>
+      <td style="color:${row.inPodium==='ANO' ? '#4caf50' : '#ccc'}">${row.inPodium}</td>
+      <td>${row.miss1}</td>
+      <td>${row.miss3}</td>
+    `;
+    tbody.appendChild(tr);
+  });
+}
+  
+  
 /* === Profil závodníka === */
 function renderProfileInit(){
   const list = $('#driverList'); if(!list) return;
